syntax = "proto3";
//生成文件所在包名
option java_package = "cn.aberic.bother.entity.proto.consensus";
//生成的java文件名
option java_outer_classname = "GroupInfoProto";

import "consensus/ElectionVote.proto";

message GroupInfo {
    string leaderAddress = 1; // 当前Leader的远程地址
    string nextLeaderAddress = 2; // 下一个Leader的远程地址
    ConnectStatus status = 3; // 自身在此小组中的当前连接状态
    int64 timestamp = 4; // 当前Leader选举时间戳
    repeated string addresses = 5; // 当前连接小组集合
    repeated ElectionVote votes = 6; // 当前选举集合
    repeated ElectionVote nextVotes = 7; // 下轮选举集合

    enum ConnectStatus{
        NONE = 0; // 未连接任何圈子
        LEADER = 1; // 圈子中的Leader节点
        FOLLOW = 2; // 圈子中的Follow节点
        ELECTION = 3; // 当前圈子Leader节点选举中
    }

}
